issue 79 - fixed icons top spacing in the Connect With Us section

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -22,6 +22,10 @@
   padding: 0 1.5rem;
 }
 
+.footer .footer-links .row .links-column .link-container {
+    display: flex;
+}
+
 .footer .footer-links .links-title {
   color: var(--text-color);
   font-size: var(--body-font-size-m);
